add unrolled hash-map and vector for optimization